[DATALAB-2185]: Fixed action in gear menu and calendar on Safari

--- a/services/self-service/src/main/resources/webapp/src/app/administration/project/project-list/project-list.component.scss
+++ b/services/self-service/src/main/resources/webapp/src/app/administration/project/project-list/project-list.component.scss
@@ -141,7 +141,7 @@ td.settings {
 }
 
 .list-menu{
-  min-width: 190px;
+  min-width: 205px;
 }
 
 .project-endpoint-name{
