--- a/services/self-service/src/main/resources/webapp/src/app/reports/reporting/reporting-grid/reporting-grid.component.scss
+++ b/services/self-service/src/main/resources/webapp/src/app/reports/reporting/reporting-grid/reporting-grid.component.scss
@@ -17,7 +17,6 @@
  * under the License.
  */
 .billing-page-wrapper{
-  position: relative;
   height: calc(100vh - 130px);
   scroll-behavior: smooth;
   margin-left: -15px;
